# skJSON

./: .gitignore  CMakeLists.txt  Makefile  README.md  node.c  node.h  parser.c  parser.h  scanner.c  scanner.h  sk_vec.c  sk_vec.h  slice.c  slice.h  test.json  token.h
include/: skJson.h
src/: '  node.c  node.h  parser.c  parser.h  scanner.c  scanner.h  sk_vec.c  sk_vec.h  skerror.h  skhashtable.c  skhashtable.h  skjson.c  skjson.h  sknode.c  sknode.h  skparser.c  skparser.h  skscanner.c  skscanner.h  skslice.c  skslice.h  sktoken.h  sktypes.h  skutils.c  skutils.h  skvec.c  skvec.h  slice.c  slice.h
tests/: CMakeLists.txt  Makefile  bitcoin_block.json  complex.json  sk_json_test.c  skjson_test.c  test.json  usd_exchange.json
